# usdOpenAssetIOResolver

./: CMakeLists.txt
cmake/: DefaultTargetProperties.cmake
src/: CMakeLists.txt  resolver.cpp  resolver.h
tests/: test_resolver.py
tests/resources/integration_test_data/: bal_library.json
